--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -9,11 +9,28 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
      <children>
-      <TextField layoutX="1086.0" layoutY="14.0" prefHeight="31.0" prefWidth="100.0" fx:id="x" />
-      <TextField fx:id="y" layoutX="1086.0" layoutY="45.0" prefHeight="31.0" prefWidth="100.0" />
-      <TextField fx:id="seedinuput" layoutX="1086.0" layoutY="114.0" prefHeight="31.0" prefWidth="100.0" />
-      <Button layoutX="1104.0" layoutY="76.0" mnemonicParsing="false" onAction="#size" text="Space" />
-      <Button layoutX="1094.0" layoutY="145.0" mnemonicParsing="false" onAction="#seed" text="Generate" />
+
+         <TextField layoutX="944.0" layoutY="14.0" prefHeight="31.0" prefWidth="100.0" fx:id="x" />
+         <TextField fx:id="y" layoutX="944.0" layoutY="45.0" prefHeight="31.0" prefWidth="100.0" />
+         <TextField fx:id="seedinuput" layoutX="944.0" layoutY="114.0" prefHeight="31.0" prefWidth="100.0" />
+         <Button layoutX="970.0" layoutY="76.0" mnemonicParsing="false" onAction="#size" text="Space" />
+         <Button layoutX="961.0" layoutY="145.0" mnemonicParsing="false" onAction="#seed" text="Generate" />
+
+         <Button layoutX="957.0" layoutY="194.0" mnemonicParsing="false" onAction="#grain" text="GrainGrow" />
+
+         <Button layoutX="902.0" layoutY="250.0" mnemonicParsing="false" onAction="#save" prefHeight="31.0" prefWidth="91.0" text="Save" />
+         <Button layoutX="999.0" layoutY="250.0" mnemonicParsing="false" onAction="#loadimage" prefHeight="31.0" prefWidth="91.0" text="Load" />
+
+         <Button layoutX="1007.0" layoutY="300.0" mnemonicParsing="false" onAction="#loadtxt" text="LoadString" />
+         <Button layoutX="921.0" layoutY="300.0" mnemonicParsing="false" onAction="#saveString" text="SaveString" />
+
+         <TextField fx:id="rd" layoutX="925.0" layoutY="364.0" text="r/d" />
+         <TextField fx:id="number" layoutX="925.0" layoutY="339.0" text="number" />
+
+         <Button layoutX="935.0" layoutY="404.0" mnemonicParsing="false" onAction="#square" text="Square" />
+         <Button layoutX="1019.0" layoutY="404.0" mnemonicParsing="false" onAction="#circle" text="Circle" />
+
+
       <BorderPane layoutX="14.0" layoutY="14.0" style="-fx-border-color: BLACK;">
          <center>
             <Canvas fx:id="pane" height="500.0" width="500.0">
@@ -22,9 +39,7 @@
                </BorderPane.margin></Canvas>
          </center>
       </BorderPane>
-      <Button layoutX="1089.0" layoutY="195.0" mnemonicParsing="false" onAction="#grain" text="GrainGrow" />
-      <Button layoutX="1044.0" layoutY="250.0" mnemonicParsing="false" onAction="#save" prefHeight="31.0" prefWidth="91.0" text="Save" />
-      <Button layoutX="1141.0" layoutY="250.0" mnemonicParsing="false" onAction="#loadimage" prefHeight="31.0" prefWidth="91.0" text="Load" />
-      <Button layoutX="1060.0" layoutY="311.0" mnemonicParsing="false" onAction="#loadtxt" text="LoadString" />
+
+
    </children>
 </AnchorPane>
