--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -10,31 +10,41 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
      <children>
 
-         <TextField layoutX="944.0" layoutY="14.0" prefHeight="31.0" prefWidth="100.0" fx:id="x" />
-         <TextField fx:id="y" layoutX="944.0" layoutY="45.0" prefHeight="31.0" prefWidth="100.0" />
-         <TextField fx:id="seedinuput" layoutX="944.0" layoutY="114.0" prefHeight="31.0" prefWidth="100.0" />
+         <TextField layoutX="944.0" layoutY="14.0" prefHeight="31.0" prefWidth="100.0" promptText="width" fx:id="x" />
+         <TextField fx:id="y" layoutX="944.0" layoutY="45.0" prefHeight="31.0" prefWidth="100.0" promptText="height" />
+         <TextField fx:id="seedinuput" layoutX="929.0" layoutY="114.0" prefHeight="31.0" prefWidth="162.0" promptText="number of nucleons" />
          <Button layoutX="970.0" layoutY="76.0" mnemonicParsing="false" onAction="#size" text="Space" />
-         <Button layoutX="961.0" layoutY="145.0" mnemonicParsing="false" onAction="#seed" text="Generate" />
+         <Button layoutX="929.0" layoutY="145.0" mnemonicParsing="false" onAction="#seed" prefHeight="25.0" prefWidth="73.0" text="Generate" />
 
          <Button layoutX="908.0" layoutY="207.0" mnemonicParsing="false" onAction="#grain" text="GrainGrow" />
 
-         <Button layoutX="902.0" layoutY="250.0" mnemonicParsing="false" onAction="#save" prefHeight="31.0" prefWidth="91.0" text="Save" />
-         <Button layoutX="999.0" layoutY="250.0" mnemonicParsing="false" onAction="#loadimage" prefHeight="31.0" prefWidth="91.0" text="Load" />
+         <Button layoutX="902.0" layoutY="250.0" mnemonicParsing="false" onAction="#save" prefHeight="31.0" prefWidth="91.0" text="SaveImage" />
+         <Button layoutX="999.0" layoutY="250.0" mnemonicParsing="false" onAction="#loadimage" prefHeight="31.0" prefWidth="91.0" text="LoadImage" />
 
-         <Button layoutX="1007.0" layoutY="300.0" mnemonicParsing="false" onAction="#loadtxt" text="LoadString" />
-         <Button layoutX="921.0" layoutY="300.0" mnemonicParsing="false" onAction="#saveString" text="SaveString" />
+         <Button layoutX="1007.0" layoutY="300.0" mnemonicParsing="false" onAction="#loadtxt" text="LoadTxt" />
+         <Button layoutX="921.0" layoutY="300.0" mnemonicParsing="false" onAction="#saveString" text="SaveTxt" />
 
-         <TextField fx:id="rd" layoutX="925.0" layoutY="364.0" text="r/d" />
-         <TextField fx:id="number" layoutX="925.0" layoutY="339.0" text="number" />
+         <TextField fx:id="rd" layoutX="925.0" layoutY="364.0" promptText="size of inclusions" />
+         <TextField fx:id="number" layoutX="925.0" layoutY="339.0" promptText="number of inclusions" />
 
          <Button layoutX="935.0" layoutY="404.0" mnemonicParsing="false" onAction="#square" text="Square" />
          <Button layoutX="1019.0" layoutY="404.0" mnemonicParsing="false" onAction="#circle" text="Circle" />
          
          <Button layoutX="1005.0" layoutY="207.0" mnemonicParsing="false" onAction="#grain2" text="GrainGrow2" />
 
-         <TextField fx:id="percent" layoutX="995.0" layoutY="182.0" prefHeight="25.0" prefWidth="100.0" />
+         <TextField fx:id="percent" layoutX="995.0" layoutY="182.0" prefHeight="25.0" prefWidth="100.0" promptText="\% to normal grain" />
 
-      <BorderPane layoutX="14.0" layoutY="14.0" style="-fx-border-color: BLACK;">
+         <Button layoutX="976.0" layoutY="481.0" mnemonicParsing="false" onAction="#border" text="Boarder" />
+         <TextField fx:id="boardSize" layoutX="931.0" layoutY="456.0" promptText="border size" />
+         <Button layoutX="981.0" layoutY="516.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
+
+         <Button layoutX="1000.0" layoutY="145.0" mnemonicParsing="false" onAction="#GenerateMC" prefHeight="25.0" prefWidth="91.0" text="GenerateMC" />
+         <TextField fx:id="jgb" layoutX="1107.0" layoutY="182.0" prefHeight="25.0" prefWidth="79.0" promptText="jgb" />
+         <Button layoutX="1107.0" layoutY="207.0" mnemonicParsing="false" onAction="#MonteCarloGrain" text="MonteCarlo" />
+         <TextField fx:id="iteration" layoutX="1110.0" layoutY="157.0" prefHeight="25.0" prefWidth="73.0" promptText="iter" />
+
+         <BorderPane layoutX="14.0" layoutY="14.0" style="-fx-border-color: BLACK;">
+
          <center>
             <Canvas fx:id="pane" height="500.0" width="500.0">
                <BorderPane.margin>
@@ -42,6 +52,9 @@
                </BorderPane.margin></Canvas>
          </center>
       </BorderPane>
+
+
+
 
 
 
